--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "reactstrap": "^9.2.1",
     "web-vitals": "^2.1.0"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,3 +42,4 @@
     ]
   }
 }
+
